# generelle

./: README.md  meson.build
examples/: Makefile  test.cpp
include/generelle/: modelling.hpp  visualization.hpp
src/modelling/algebraic/: algebraic.cpp  algebraic.hpp  box.cpp  box.hpp  cylinder.cpp  cylinder.hpp  declarations.hpp  marching_cube_info.hpp  marching_cubes.cpp  marching_cubes.hpp  mesh_constructor.cpp  mesh_constructor.hpp  operations.cpp  operations.hpp  shapes.cpp  shapes.hpp  sphere.cpp  sphere.hpp  transformations.cpp  transformations.hpp
src/visualization/: visualization.cpp  visualization.hpp
